// ================================================================
// SKALA Physical Risk AI - Application ERD
// ================================================================
// Database: skala_application (Port: 5435)
// Service: SpringBoot
// Total Tables: 9
//
// Last Modified: 2025-12-08
// Version: v03
// ================================================================

Project skala_application {
  database_type: 'PostgreSQL'
  Note: '''
    SKALA Physical Risk AI 시스템 애플리케이션 DB
    - 사용자 인증 (basic.dbml 기준)
    - 사업장 관리 (basic.dbml 기준)
    - AI 분석 결과 저장
    - 리포트 관리
  '''
}

// ============================================
// 1. User Tables (3개) - basic.dbml 기준
// ============================================

Table users {
  id uuid [pk, note: '사용자 ID']
  email varchar(255) [unique, not null, note: '이메일 (로그인 ID)']
  name varchar(100) [not null, note: '사용자 이름']
  password varchar(255) [not null, note: '비밀번호 (암호화)']
  language varchar(10) [note: '언어 (ko/en)']

  Note: '사용자 정보 (basic.dbml 기준)'
}

Table password_reset_tokens {
  id uuid [pk, note: '토큰 ID']
  user_id uuid [not null, ref: > users.id, note: '사용자 ID']
  token varchar(255) [unique, not null, note: '재설정 토큰']
  expires_at timestamp [not null, note: '만료 시간']
  created_at timestamp [not null, default: `now()`, note: '생성 시간']

  Note: '비밀번호 재설정 토큰 (basic.dbml 기준)'

  indexes {
    user_id
    token
  }
}

Table refresh_tokens {
  id uuid [pk, note: '토큰 ID']
  user_id uuid [not null, ref: > users.id, note: '사용자 ID (CASCADE 삭제)']
  token varchar(500) [unique, not null, note: 'JWT 리프레시 토큰']
  expires_at timestamp [not null, note: '만료 시간 (기본 7일)']
  created_at timestamp [not null, default: `now()`, note: '생성 시간']
  revoked boolean [not null, default: false, note: '토큰 무효화 여부']
  device_info varchar(255) [note: 'User-Agent 정보']
  ip_address varchar(45) [note: 'IPv4/IPv6 주소']

  Note: '''
    리프레시 토큰 관리
    - JWT 세션 유지
    - 멀티 디바이스 로그인 추적
    - 로그아웃 시 revoked = true
  '''

  indexes {
    user_id
    token
    expires_at
  }
}

// ============================================
// 2. Site Tables (1개) - basic.dbml 기준
// ============================================

Table sites {
  id uuid [pk, note: '사업장 ID']
  user_id uuid [not null, ref: > users.id, note: '소유자 ID']
  name varchar(255) [not null, note: '사업장 이름']
  road_address varchar(500) [note: '도로명 주소']
  jibun_address varchar(500) [note: '지번 주소']
  latitude decimal(10,8) [note: '위도']
  longitude decimal(11,8) [note: '경도']
  type varchar(100) [note: '업종/유형']

  Note: '사업장 정보 (basic.dbml 기준)'

  indexes {
    user_id
    (latitude, longitude)
  }
}

// ============================================
// 3. Analysis Tables (2개) - SpringBoot Entity
// ============================================

Table analysis_jobs {
  id uuid [pk, note: '작업 ID']
  site_id uuid [not null, ref: > sites.id, note: '사업장 ID']
  job_id varchar(100) [unique, not null, note: 'FastAPI 작업 ID']
  status varchar(20) [not null, default: 'QUEUED', note: 'QUEUED/RUNNING/COMPLETED/FAILED']
  progress integer [default: 0, note: '진행률 (0-100)']
  current_node varchar(100) [note: '현재 LangGraph 노드명']
  created_at timestamp [not null, default: `now()`, note: '생성 시간']
  started_at timestamp [note: '시작 시간']
  completed_at timestamp [note: '완료 시간']
  estimated_completion_time timestamp [note: '예상 완료 시간']
  error_code varchar(50) [note: '에러 코드']
  error_message text [note: '에러 메시지']
  updated_at timestamp [note: '업데이트 시간']

  Note: 'AI 분석 작업 상태 추적 (SpringBoot Entity)'

  indexes {
    site_id
    status
    job_id
  }
}

Table analysis_results {
  id uuid [pk, note: '결과 ID']
  site_id uuid [not null, ref: > sites.id, note: '사업장 ID']
  hazard_type varchar(50) [note: '위험 유형 (9가지)']
  analysis_data jsonb [note: '분석 결과 JSON']
  analyzed_at timestamp [not null, default: `now()`, note: '분석 일시']

  Note: 'AI 분석 결과 저장 (JSON)'

  indexes {
    site_id
    hazard_type
  }
}

// ============================================
// 4. Report Tables (1개) - SpringBoot Entity
// ============================================

Table reports {
  id uuid [pk, note: '리포트 ID']
  site_id uuid [not null, ref: > sites.id, note: '사업장 ID']
  site_name varchar(200) [note: '사업장명 스냅샷']
  type varchar(20) [not null, note: 'SUMMARY/FULL/GOVERNANCE']
  status varchar(20) [not null, default: 'PENDING', note: 'PENDING/GENERATING/COMPLETED/FAILED']
  s3_key varchar(500) [note: 'S3 저장 키']
  file_size bigint [note: '파일 크기 (bytes)']
  created_at timestamp [not null, default: `now()`, note: '생성 시간']
  completed_at timestamp [note: '완료 시간']
  expires_at timestamp [note: '만료 일시 (7일 후)']

  Note: '리포트 메타데이터 (S3 저장)'

  indexes {
    site_id
    status
  }
}

// ============================================
// 5. Meta Tables (2개) - SpringBoot Entity
// ============================================

Table industries {
  id serial [pk, note: '업종 ID']
  code varchar(50) [unique, not null, note: '업종 코드']
  name varchar(100) [not null, note: '업종 이름']
  description text [note: '설명']

  Note: '''
    업종 메타데이터 (16개 초기값)
    - data_center: 데이터센터
    - manufacturing: 제조업
    - logistics: 물류/창고
    - retail: 유통/판매
    - office: 사무/오피스
    - healthcare: 의료/복지
    - education: 교육
    - energy: 에너지/발전
    - finance: 금융
    - hospitality: 숙박/관광
    - agriculture: 농업/축산
    - chemical: 화학/정유
    - food: 식품/음료
    - pharmaceutical: 제약/바이오
    - transportation: 교통/운송
    - other: 기타
  '''
}

Table hazard_types {
  id serial [pk, note: '위험 유형 ID']
  code varchar(50) [unique, not null, note: '위험 코드']
  name varchar(100) [not null, note: '한글 이름']
  name_en varchar(100) [note: '영문 이름']
  category varchar(20) [note: 'TEMPERATURE/WATER/WIND/OTHER']
  description text [note: '설명']

  Note: '''
    위험 유형 메타데이터 (9개)
    - extreme_heat: 극심한 고온 (TEMPERATURE)
    - extreme_cold: 극심한 한파 (TEMPERATURE)
    - wildfire: 산불 (OTHER)
    - drought: 가뭄 (WATER)
    - water_stress: 물부족 (WATER)
    - sea_level_rise: 해수면 상승 (WATER)
    - river_flood: 하천 홍수 (WATER)
    - urban_flood: 도시 홍수 (WATER)
    - typhoon: 태풍 (WIND)
  '''
}

// ============================================
// Relationships Summary
// ============================================

// users (1) --> (N) sites
// users (1) --> (N) password_reset_tokens
// users (1) --> (N) refresh_tokens
// sites (1) --> (N) analysis_jobs
// sites (1) --> (N) analysis_results
// sites (1) --> (N) reports
